apps/wyoming/piper/base/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: &name piper
  labels:
    app: *name
  annotations:
    reloader.stakater.com/auto: "true"

spec:
  selector:
    matchLabels:
      app: *name
  template:
    metadata:
      labels:
        app: *name
        k8s.lfp.rocks/service: "piper"
        k8s.lfp.rocks/version: "latest"
      annotations:
        prometheus.io/scrape: "false"
        prometheus.istio.io/merge-metrics: "false"
    spec:
      runtimeClassName: nvidia
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: k8s.lfp.rocks/gpu
                    operator: In
                    values:
                      - enabled
      containers:
        - name: *name
          image: rhasspy/wyoming-piper:latest
          imagePullPolicy: IfNotPresent
          args:
            - --voice
            - en_US-lessac-medium
          ports:
            - name: piper
              containerPort: 10200
          volumeMounts:
            - name: data
              mountPath: /data
          resources:
            limits:
              memory: "1Gi"
            requests:
              cpu: "50m"
              memory: "256Mi"
      volumes:
        - name: data
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: piper
  labels:
    app: piper
    service: piper
spec:
  ports:
    - name: piper
      port: 10200
      targetPort: 10200
  selector:
    app: piper
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: piper-httproute
  namespace: wyoming
spec:
  parentRefs:
    - name: internal-gateway-http
      namespace: cilium-ingress
  hostnames: ["${SUB_IRON_SENT}.${DOMAIN_COBRA_LANTERN}"]
  rules:
    - backendRefs:
        - name: piper
          port: 10200
